src/generated_bindings/volt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_channel__bindgen_ty_1__bindgen_ty_1"]
        [::core::mem::size_of::<nvm_channel__bindgen_ty_1__bindgen_ty_1>() - 8usize];
    ["Alignment of nvm_channel__bindgen_ty_1__bindgen_ty_1"]
        [::core::mem::align_of::<nvm_channel__bindgen_ty_1__bindgen_ty_1>() - 8usize];
};
impl nvm_channel__bindgen_ty_1__bindgen_ty_1 {
    #[inline]
    pub fn ns_id(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 16u8) as u64) }
    }
    #[inline]
    pub fn set_ns_id(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 16u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ns_id_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                0usize,
                16u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_ns_id_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                16u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn ns_part(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(16usize, 32u8) as u64) }
    }
    #[inline]
    pub fn set_ns_part(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(16usize, 32u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ns_part_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                16usize,
                32u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_ns_part_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                16usize,
                32u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn ftl_id(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(48usize, 8u8) as u64) }
    }
    #[inline]
    pub fn set_ftl_id(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(48usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ftl_id_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                48usize,
                8u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_ftl_id_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                48usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn in_use(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(56usize, 8u8) as u64) }
    }
    #[inline]
    pub fn set_in_use(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(56usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn in_use_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                56usize,
                8u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_in_use_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                56usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        ns_id: u64,
        ns_part: u64,
        ftl_id: u64,
        in_use: u64,
    ) -> __BindgenBitfieldUnit<[u8; 8usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 8usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 16u8, {
            let ns_id: u64 = unsafe { ::core::mem::transmute(ns_id) };
            ns_id as u64
        });
        __bindgen_bitfield_unit.set(16usize, 32u8, {
            let ns_part: u64 = unsafe { ::core::mem::transmute(ns_part) };
            ns_part as u64
        });
        __bindgen_bitfield_unit.set(48usize, 8u8, {
            let ftl_id: u64 = unsafe { ::core::mem::transmute(ftl_id) };
            ftl_id as u64
        });
        __bindgen_bitfield_unit.set(56usize, 8u8, {
            let in_use: u64 = unsafe { ::core::mem::transmute(in_use) };
            in_use as u64
        });
        __bindgen_bitfield_unit
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_channel__bindgen_ty_1"]
        [::core::mem::size_of::<nvm_channel__bindgen_ty_1>() - 8usize];
    ["Alignment of nvm_channel__bindgen_ty_1"]
        [::core::mem::align_of::<nvm_channel__bindgen_ty_1>() - 8usize];
    ["Offset of field: nvm_channel__bindgen_ty_1::i"]
        [::core::mem::offset_of!(nvm_channel__bindgen_ty_1, i) - 0usize];
    ["Offset of field: nvm_channel__bindgen_ty_1::nvm_info"]
        [::core::mem::offset_of!(nvm_channel__bindgen_ty_1, nvm_info) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_channel"][::core::mem::size_of::<nvm_channel>() - 336usize];
    ["Alignment of nvm_channel"][::core::mem::align_of::<nvm_channel>() - 8usize];
    ["Offset of field: nvm_channel::ch_id"][::core::mem::offset_of!(nvm_channel, ch_id) - 0usize];
    ["Offset of field: nvm_channel::ch_mmgr_id"]
        [::core::mem::offset_of!(nvm_channel, ch_mmgr_id) - 2usize];
    ["Offset of field: nvm_channel::ns_pgs"][::core::mem::offset_of!(nvm_channel, ns_pgs) - 8usize];
    ["Offset of field: nvm_channel::slba"][::core::mem::offset_of!(nvm_channel, slba) - 16usize];
    ["Offset of field: nvm_channel::elba"][::core::mem::offset_of!(nvm_channel, elba) - 24usize];
    ["Offset of field: nvm_channel::tot_bytes"]
        [::core::mem::offset_of!(nvm_channel, tot_bytes) - 32usize];
    ["Offset of field: nvm_channel::mmgr_rsv"]
        [::core::mem::offset_of!(nvm_channel, mmgr_rsv) - 40usize];
    ["Offset of field: nvm_channel::ftl_rsv"]
        [::core::mem::offset_of!(nvm_channel, ftl_rsv) - 42usize];
    ["Offset of field: nvm_channel::mmgr"][::core::mem::offset_of!(nvm_channel, mmgr) - 48usize];
    ["Offset of field: nvm_channel::ftl"][::core::mem::offset_of!(nvm_channel, ftl) - 56usize];
    ["Offset of field: nvm_channel::geometry"]
        [::core::mem::offset_of!(nvm_channel, geometry) - 64usize];
    ["Offset of field: nvm_channel::mmgr_rsv_list"]
        [::core::mem::offset_of!(nvm_channel, mmgr_rsv_list) - 72usize];
    ["Offset of field: nvm_channel::ftl_rsv_list"]
        [::core::mem::offset_of!(nvm_channel, ftl_rsv_list) - 200usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_parser_cmd {
    pub name: [::core::ffi::c_char; 31usize],
    pub opcode: u8,
    pub queue_type: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_parser_cmd"][::core::mem::size_of::<nvm_parser_cmd>() - 33usize];
    ["Alignment of nvm_parser_cmd"][::core::mem::align_of::<nvm_parser_cmd>() - 1usize];
    ["Offset of field: nvm_parser_cmd::name"]
        [::core::mem::offset_of!(nvm_parser_cmd, name) - 0usize];
    ["Offset of field: nvm_parser_cmd::opcode"]
        [::core::mem::offset_of!(nvm_parser_cmd, opcode) - 31usize];
    ["Offset of field: nvm_parser_cmd::queue_type"]
        [::core::mem::offset_of!(nvm_parser_cmd, queue_type) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_dma {
    pub ptr: *mut ::core::ffi::c_void,
    pub prp: u32,
    pub size: u64,
    pub direction: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_dma"][::core::mem::size_of::<nvm_dma>() - 32usize];
    ["Alignment of nvm_dma"][::core::mem::align_of::<nvm_dma>() - 8usize];
    ["Offset of field: nvm_dma::ptr"][::core::mem::offset_of!(nvm_dma, ptr) - 0usize];
    ["Offset of field: nvm_dma::prp"][::core::mem::offset_of!(nvm_dma, prp) - 8usize];
    ["Offset of field: nvm_dma::size"][::core::mem::offset_of!(nvm_dma, size) - 16usize];
    ["Offset of field: nvm_dma::direction"][::core::mem::offset_of!(nvm_dma, direction) - 24usize];
};
unsafe extern "C" {
    pub fn ox_dma(dma: *mut nvm_dma) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltStatus {
    pub ready: u8,
    pub active: u8,
    pub allocated_memory: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VoltStatus"][::core::mem::size_of::<VoltStatus>() - 16usize];
    ["Alignment of VoltStatus"][::core::mem::align_of::<VoltStatus>() - 8usize];
    ["Offset of field: VoltStatus::ready"][::core::mem::offset_of!(VoltStatus, ready) - 0usize];
    ["Offset of field: VoltStatus::active"][::core::mem::offset_of!(VoltStatus, active) - 1usize];
    ["Offset of field: VoltStatus::allocated_memory"]
        [::core::mem::offset_of!(VoltStatus, allocated_memory) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltPage {
    pub state: u8,
    pub data: *mut u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VoltPage"][::core::mem::size_of::<VoltPage>() - 16usize];
    ["Alignment of VoltPage"][::core::mem::align_of::<VoltPage>() - 8usize];
    ["Offset of field: VoltPage::state"][::core::mem::offset_of!(VoltPage, state) - 0usize];
    ["Offset of field: VoltPage::data"][::core::mem::offset_of!(VoltPage, data) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltBlock {
    pub id: u16,
    pub life: u16,
    pub next_pg: *mut VoltPage,
    pub pages: *mut VoltPage,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VoltBlock"][::core::mem::size_of::<VoltBlock>() - 24usize];
    ["Alignment of VoltBlock"][::core::mem::align_of::<VoltBlock>() - 8usize];
    ["Offset of field: VoltBlock::id"][::core::mem::offset_of!(VoltBlock, id) - 0usize];
    ["Offset of field: VoltBlock::life"][::core::mem::offset_of!(VoltBlock, life) - 2usize];
    ["Offset of field: VoltBlock::next_pg"][::core::mem::offset_of!(VoltBlock, next_pg) - 8usize];
    ["Offset of field: VoltBlock::pages"][::core::mem::offset_of!(VoltBlock, pages) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltLun {
    pub blk_offset: *mut VoltBlock,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VoltLun"][::core::mem::size_of::<VoltLun>() - 8usize];
    ["Alignment of VoltLun"][::core::mem::align_of::<VoltLun>() - 8usize];
    ["Offset of field: VoltLun::blk_offset"][::core::mem::offset_of!(VoltLun, blk_offset) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltCh {
    pub lun_offset: *mut VoltLun,
}
